--- a/Internship-Netsol-ProductManagement-DotNetApi/View/Pages/Products.html
+++ b/Internship-Netsol-ProductManagement-DotNetApi/View/Pages/Products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>View Products</title>
+    <title>View All Products</title>
     <link rel="stylesheet" href="../Styles/FormStyle.css">
     <style>
         /* Center the table */
