--- a/Internship-Netsol-ProductManagement-DotNetApi/View/Pages/UpdateProduct.html
+++ b/Internship-Netsol-ProductManagement-DotNetApi/View/Pages/UpdateProduct.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Product Management</title>
+    <title>Update Product by ID</title>
     <link rel="stylesheet" href="../Styles/FormStyle.css">
 </head>
 
